<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lamp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="refresh">Refresh</string>
    <string name="inboundsms">incoming sms</string>
    <string name="audiosensor">audio sensor</string>
    <string name="test">Test</string>
    <string name="stop">Interrupt</string>
    <string name="alarm">Alarm</string>
    <string name="phone">Phone</string>
    <string name="pref_title_inbound_sms">Sms</string>
    <string name="pref_summary_inbound_sms">Incoming sms alert</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_title_inbound_sms_contact">Contacts</string>
    <string name="pref_summary_inbound_sms_contact">Receive alert by all</string>
    <string name="pref_title_alarm">Alarm</string>
    <string name="pref_summary_alarm">Alert at</string>
    <string name="pref_contact_dialog_message">Select contact to receive alert from</string>
    <string name="pref_dialog_positive_button_text">OK</string>
    <string name="pref_dialog_negative_button_text">Cancel</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_test">Test</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_about">About</string>
    
</resources>
